jtx switched to arraylist